# Cuthbert

./: API_SPECIFICATION.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_ARCHITECTURE.md  TESTING.md  TROUBLESHOOTING.md  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  main.rs
src/api/: mod.rs  rest.rs  websocket.rs
src/discovery/: bandwidth.rs  broadcast.rs  gossip.rs  mod.rs  ping.rs  traceroute.rs  vpn_scan.rs  wireguard.rs
src/routes/: lookup.rs  mod.rs  parser.rs
src/web/static/: app.js  index.html  styles.css
