[package]
name = "network-route-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
surge-ping = "0.8"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
